Tue Jul  9 11:04:35 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb (Win32::Regstry#check):
	  should report the position of the error.

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb
	  (Win32::Regstry#QueryValue): workaround for test-all crash.

Tue Jul  9 10:27:56 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb
	  (Win32::Registry.expand_environ): use suitable encoding for the
	  string.

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb (Win32::Registry#read):
	  should return REG_SZ, REG_EXPAND_SZ and REG_MULTI_SZ values with
	  the expected encoding -- assumed as the same encoding of name.

Tue Jul  9 10:02:45 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb
	  (Win32::Registry::Error#initialize): use suitable encoding for the
	  string.

Tue Jul  9 09:46:53 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/win32/lib/win32/registry.rb (Win32::Registry.expand_environ):
	  use suitable encoding for the string.  fixed a test-all error of
	  r41838.

	* ext/fiddle/win32/lib/win32/registry.rb: same changes of r41838 and
	  this revision of dl's win32/registry.rb.

Tue Jul  9 07:39:45 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 2.0.4.  See
	  https://github.com/rubygems/rubygems/blob/2.0/History.txt for changes

Tue Jul  9 01:47:16 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (biglsh_bang): Don't shift a BDIGIT with BITSPERDIG bits.
	  (bigrsh_bang): Ditto.

Tue Jul  9 01:17:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigrsh_bang): Fix bignum digits overrun.

Tue Jul  9 00:46:22 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (biglsh_bang): Fix bignum digits under-run.

Mon Jul  8 23:36:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/win32/lib/win32/registry.rb (Error, API): use WCHAR
	  interfaces.  c.f. [Bug #8508]

Mon Jul  8 23:13:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
