@@ -1,3 +1,11 @@
+Tue Jul  9 12:47:08 2013  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* io.c (appendline): use READ_CHAR_PENDING_XXX macros and
+	  RSTRING_END().
+
+	* io.c (rb_io_getline_1): rewrite nested if statement into one
+	  statement.
+
 Tue Jul  9 11:04:35 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/{dl,fiddle}/win32/lib/win32/registry.rb (Win32::Regstry#check):
